@@ -1,7 +1,20 @@
 ------- current plan (near objectives): ------- 
-Model related:
-- modules should have a category they belong to, so QMenu on the QGraphicsScene needs to be redone
+- using QMenu should add the module at position x,y where the QMenu was created and not where the item in the 
+  QMenu was selected. this usually results in items being inserted out of sight...
 
+
+
+
+
+
+
+
+========================================================================
+  Model related: Adding, selecting, removing of single/multiple items:
+========================================================================
+- FIXME: insertConnection has a bug: one can create a loop with combiner::add and transformer::displace
+         it seems insertConnection can't see any connections?!
+- FIXME: insert modules at 'out of sight' will create strange view relocations...
 - if a property changes(a child), the parent (module) should get updated in the GraphicsScene
 - implement ItemView::dataChanged(..) -> GraphicsScene::moduleUpdated(..)
 Q: who accesses 'module properties'?
@@ -14,9 +27,7 @@ A: a list of uses:
   - read property
     - ItemView.cpp to find the x,y position to place the QGraphicsItem
     - QTreeView (this is an editor)
-
 - QTreeView editor for pos should split QPoint up into x and y component as it is done in assistant. is that compilicated?
-Adding, selecting, removing of single/multiple items:
 - FIXME: in functions as insertModule: add a check to the parameters (done there, but i need to check other similar functions)
          this could avoid a lot of segfaults when inserting new concepts into the code
 - maybe refactor ~DataRoot and ~DataAbstractModules' code into the base class ~ destructor, to reduce code 
@@ -41,8 +52,12 @@ Adding, selecting, removing of single/multiple items:
 
 
 
-
-Other:
+========================================================================
+  QGraphicsItems mokup
+========================================================================
+- QGraphicsItems should be QWidgets (for module preview) so that one can scroll the view port of a noisegen right from there.
+  this would be cool as it would make editing much faster and more interactive
+- adding a connection (when no connection was added before whill relocate the view quite far away?!)
 - using Document.cpp::Document()'s insertConnection will add scrollbars to the QGraphicsView... ;P
  - so i have to fix my QGraphicsView code once again
  - it's funny that clicking a item in the right side will now focus over the respecitive QGraphicsItem (didn't work before)
@@ -51,6 +66,7 @@ Other:
 
 - property may be registered only once, fail with exit(1)!
 - implement sorting of the QTreeView based on the distance from the center of the view
+- QTreeView should show items always expanded (right now all are collapsed)
 - implement singleselection:
   > if an item in the graphicsview is selected, the QTreeView should only show the respective properties of that item
   + if more items are selected, diplay all selected items
@@ -74,7 +90,10 @@ GraphicsView:
  - zoomin/zoomout (mwheel or +/-) and zoomfit (gui button)
  - move selected items should move the view if moved towards the border
 
-Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
+========================================================================
+  Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
+========================================================================
+- modput needs some redesigning, see modules which use more than one modput: transformer::displace
 - also add a little 'x' button on the top right side of the module (similar to widgets)
 - scrollbars in GraphicsView are currently disabled by the resizeEvent(..) implementation, maybe
   they should indicated the document width()/height() and making it work might be by using
@@ -97,8 +116,9 @@ Fixing QGraphicsItem(s) and the behaviour of the QGraphicsView:
 
 
 
-
-General:
+========================================================================
+  General concepts to consider:
+========================================================================
 - DataType.h vs DataItemType.h
 - Design choice:
   using min/max or select with libnoise can have interesting outcomes. the colorizer should know of which root the pixel was from to
@@ -117,7 +137,6 @@ General:
 
 - integrate libNoise-view (first refactore it)
 
-- integrate graphics export
 - integrate spring map exporter (smf or s3m)
 
 - integrate height-colorizer and height-texturizer
@@ -130,7 +149,9 @@ General:
 - fix copyright, linking to the library .... is that possible?
 
 - integrate 3d viewer (adapted/copied from qlobby)
+
 - include libnoise into this CMakeLists.txt (build it as well and use that)
+
 - official release of 'the source as package'
 
 
